--- a/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/user_address/add.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/user_address/add.cshtml
@@ -39,8 +39,8 @@
                 <div class="weui-cell">
                     <div class="weui-cell__hd"><label class="weui-label">配货区域：</label></div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input" type="text" name="regions" value="山东省 济宁市 任城区" readonly="" data-codes="370000,370800,370811" id='cityPicker' placeholder="请选择配货区域">
-                        <input name="codes" type="hidden" id="cityPickerCode" value="370000,370800,370811">
+                        <input class="weui-input" type="text" name="regions" value="山东省 济南市 天桥区" readonly="" data-codes="370000,250000,250000" id='cityPicker' placeholder="请选择配货区域">
+                        <input name="codes" type="hidden" id="cityPickerCode" value="370000,250000,250000">
                     </div>
                 </div>
                 <div class="weui-cell">
