--- a/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/user_index/login2 - 复制.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/user_index/login2 - 复制.cshtml
@@ -34,10 +34,13 @@
             <div class="login_form">
                 <form method="post" action="/user_index/loginDo/" class="Validform">
                     <div class="login_txt login_name">
-                        <input type="text" name="tel" autocomplete="off" placeholder="请输入购买手机号" autocomplete="off" datatype="*" errormsg="请输入购买手机号！">
+                        <input type="text" name="account" autocomplete="off" placeholder="请输入收件人电话" autocomplete="off" datatype="*" errormsg="请输入收件人电话！">
+                    </div>
+                    <div class="login_txt login_pwd">
+                        <input type="password" name="pass" autocomplete="off" placeholder="默认密码123456" autocomplete="off" datatype="*" errormsg="请输入密码！">
                     </div>
                     <div class="weui-btn-area">
-                        <a href="javascript:" class="weui-btn weui-btn_warn" id="formSubmit">查 询</a>
+                        <a href="javascript:" class="weui-btn weui-btn_warn" id="formSubmit">登 录</a>
                     </div>
                 </form>
                 <div class="login_memo" style="display:block;text-align: center;margin: 2rem auto 0;">
@@ -47,6 +50,8 @@
                         <a href="tel:17125599993" style="color: #337ab7;">17125599993</a>（上班时间：09:00~18:00）<br />
                          -->
                         <b>温馨提醒：</b><br />
+                        1、登录账户：购买靓号时留的收件人电话<br />
+                        2、登录密码：123456<br />
                         3、所有订单成功，次日下午7点发货，会有短信和语音通知，请留意<br />
                         4、查询快递单号，请登录快递官方网站查询<br />
                         5、快递均为到付件<br />
