--- a/HZSoft.Application/HZSoft.Application.Web/Areas/CustomerManage/Views/Orders/OrdersForm.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/CustomerManage/Views/Orders/OrdersForm.cshtml
@@ -9,6 +9,13 @@
     });
     //初始化控件
     function initControl() {
+        //状态
+        $("#Status").ComboBox({
+            description: "==请选择==",
+        });
+        $("#PayStatus").ComboBox({
+            description: "==请选择==",
+        });
         //获取表单
         if (!!keyValue) {
             $.SetForm({
@@ -39,119 +46,124 @@
 <div style="margin-top: 20px; margin-right: 30px;">
     <table class="form">
         <tr>
-            <td class="formTitle">订单号</td>
-            <td class="formValue">
-                <input id="OrderSn" type="text" class="form-control"  />
-            </td>
-            <td class="formTitle">用户ID</td>
-            <td class="formValue">
-                <input id="UserId" type="text" class="form-control"  />
-            </td>
-        </tr>
-        <tr>
             <td class="formTitle">手机号码</td>
             <td class="formValue">
-                <input id="Tel" type="text" class="form-control"  />
+                <input id="Tel" type="text" class="form-control" />
             </td>
             <td class="formTitle">价格</td>
             <td class="formValue">
-                <input id="Price" type="text" class="form-control"  />
+                <input id="Price" type="text" class="form-control" isvalid="yes" checkexpession="Double" />
             </td>
         </tr>
         <tr>
-            <td class="formTitle">发起时间</td>
+            <td class="formTitle">下单时间</td>
             <td class="formValue">
-                <input id="CreateDate" type="text" class="form-control"  />
+                <input id="CreateDate" type="text" class="form-control input-wdatepicker" onfocus="WdatePicker()" />
             </td>
-            <td class="formTitle">0 待付款 1 待审核 2 待发货 3 待开卡 4 已完成</td>
+            <td class="formTitle">订单状态</td>
             <td class="formValue">
-                <input id="Status" type="text" class="form-control"  />
+                <div id="Status" type="select" class="ui-select" isvalid="yes" checkexpession="NotNull">
+                    <ul>
+                        <li data-value="0">待付款</li>
+                        <li data-value="1">待审核</li>
+                        <li data-value="2">待发货</li>
+                        <li data-value="3">待开卡</li>
+                        <li data-value="4">已完成</li>
+                    </ul>
+                </div>
             </td>
         </tr>
         <tr>
-            <td class="formTitle">0 未支付 1已支付</td>
+            <td class="formTitle">支付状态</td>
             <td class="formValue">
-                <input id="PayStatus" type="text" class="form-control"  />
+                <div id="PayStatus" type="select" class="ui-select" isvalid="yes" checkexpession="NotNull">
+                    <ul>
+                        <li data-value="0">未支付</li>
+                        <li data-value="1">已支付</li>
+                    </ul>
+                </div>
             </td>
             <td class="formTitle">支付时间</td>
             <td class="formValue">
-                <input id="PayDate" type="text" class="form-control"  />
+                <input id="PayDate" type="text" class="form-control input-wdatepicker" onfocus="WdatePicker()" />
             </td>
         </tr>
         <tr>
             <td class="formTitle">收件人</td>
             <td class="formValue">
-                <input id="Receiver" type="text" class="form-control"  />
+                <input id="Receiver" type="text" class="form-control" />
             </td>
             <td class="formTitle">联系电话</td>
             <td class="formValue">
-                <input id="ContactTel" type="text" class="form-control"  />
+                <input id="ContactTel" type="text" class="form-control" />
             </td>
         </tr>
         <tr>
             <td class="formTitle">省</td>
             <td class="formValue">
-                <input id="Province" type="text" class="form-control"  />
+                <input id="Province" type="text" class="form-control" />
             </td>
             <td class="formTitle">市</td>
             <td class="formValue">
-                <input id="City" type="text" class="form-control"  />
+                <input id="City" type="text" class="form-control" />
             </td>
         </tr>
         <tr>
             <td class="formTitle">区</td>
             <td class="formValue">
-                <input id="Country" type="text" class="form-control"  />
+                <input id="Country" type="text" class="form-control" />
             </td>
             <td class="formTitle">详细地址</td>
             <td class="formValue">
-                <input id="Address" type="text" class="form-control"  />
+                <input id="Address" type="text" class="form-control" />
             </td>
         </tr>
         <tr>
             <td class="formTitle">发货人</td>
             <td class="formValue">
-                <input id="DeliveryName" type="text" class="form-control"  />
+                <input id="DeliveryName" type="text" class="form-control" />
             </td>
             <td class="formTitle">发货时间</td>
             <td class="formValue">
-                <input id="DeliveryDate" type="text" class="form-control"  />
+                <input id="DeliveryDate" type="text" class="form-control input-wdatepicker" onfocus="WdatePicker()" />
             </td>
         </tr>
         <tr>
             <td class="formTitle">快递公司</td>
             <td class="formValue">
-                <input id="ExpressCompany" type="text" class="form-control"  />
+                <input id="ExpressCompany" type="text" class="form-control" />
             </td>
             <td class="formTitle">快递单号</td>
             <td class="formValue">
-                <input id="ExpressSn" type="text" class="form-control"  />
+                <input id="ExpressSn" type="text" class="form-control" />
             </td>
         </tr>
-        <tr>
+        @*<tr>
             <td class="formTitle">快递公司编号</td>
             <td class="formValue">
-                <input id="ExpressCode" type="text" class="form-control"  />
+                <input id="ExpressCode" type="text" class="form-control" />
             </td>
             <td class="formTitle">支付单号</td>
             <td class="formValue">
-                <input id="PaySn" type="text" class="form-control"  />
+                <input id="PaySn" type="text" class="form-control" />
             </td>
         </tr>
         <tr>
             <td class="formTitle">退款时间</td>
             <td class="formValue">
-                <input id="ReturnDate" type="text" class="form-control"  />
+                <input id="ReturnDate" type="text" class="form-control" />
             </td>
             <td class="formTitle">退款原因</td>
             <td class="formValue">
-                <input id="ReturnRemark" type="text" class="form-control"  />
+                <input id="ReturnRemark" type="text" class="form-control" />
             </td>
         </tr>
         <tr>
             <td class="formTitle">退货编号</td>
             <td class="formValue">
-                <input id="ReturnSn" type="text" class="form-control"  />
-            
+                <input id="ReturnSn" type="text" class="form-control" />
+            </td>
+        </tr>*@
+
     </table>
 </div>
