H5网站仿云联微信支付，部署js头条代码前版本

--- a/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/mpg/Index.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/mpg/Index.cshtml
@@ -63,9 +63,9 @@
                         </span>
                         <a class="curr" href="./?keyword=&city=&features=&orderType=">全部</a>
                         | <a class="" href="./?keyword=&city=&orderType=&referer=&price=&features=0">超级精品号</a>
-                        | <a class="" href="./?keyword=&city=&orderType=&referer=&price=&features=1">6A</a>
-                        | <a class="" href="./?keyword=&city=&orderType=&referer=&price=&features=2">5A</a>
-                        | <a class="" href="./?keyword=&city=&orderType=&referer=&price=&features=3">4A</a>
+                        | <a class="" href="./?keyword=&city=&orderType=&referer=&price=&features=1">AAAAAA</a>
+                        | <a class="" href="./?keyword=&city=&orderType=&referer=&price=&features=2">AAAAA</a>
+                        | <a class="" href="./?keyword=&city=&orderType=&referer=&price=&features=3">AAAA</a>
                         | <a class="" href="./?keyword=&city=&orderType=&referer=&price=&features=11">3A(0-5)</a>
                         | <a class="" href="./?keyword=&city=&orderType=&referer=&price=&features=12">3A(6-9)</a>
                         | <a class="" href="./?keyword=&city=&orderType=&referer=&price=&features=4">双豹子(0-5)</a>
