--- a/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/mpg/flow.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/mpg/flow.cshtml
@@ -39,7 +39,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <header><a href="/mpg/detail/id-424038-referer-dLJp5x.html" class="t_icon"></a>号码订购<font class="d-n">(GDTA4)</font></header>
+        <header><a href="/WeChatManage/mpg/detail/@ViewBag.Id" class="t_icon"></a>号码订购<font class="d-n">(GDTA4)</font></header>
         <div class="mpart">
             <div class="vision">
                 <div class="s_mide layer" data-depth=".35"></div>
