--- a/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/user_index/login2.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/user_index/login2.cshtml
@@ -25,7 +25,7 @@
 <body>
     <!--主体部分 开始-->
     <div class="wrapper login-page">
-        <header><a href="/mpg/index" class="t_icon"></a></header>
+        <header><a href="/WeChatManage/mpg/index" class="t_icon"></a></header>
         <div class="mpart">
             <div class="vision" style="height: 5rem;">
                 <div class="s_mide layer" data-depth=".35"></div>
@@ -47,10 +47,10 @@
                         <a href="tel:17125599993" style="color: #337ab7;">17125599993</a>（上班时间：09:00~18:00）<br />
                          -->
                         <b>温馨提醒：</b><br />
-                        3、所有订单成功，次日下午7点发货，会有短信和语音通知，请留意<br />
-                        4、查询快递单号，请登录快递官方网站查询<br />
-                        5、快递均为到付件<br />
-                        6、收到快递之后：实名认证☞ 充值缴费☞ 正常使用<br />
+                        1、所有订单成功，次日下午7点发货，会有短信和语音通知，请留意<br />
+                        2、查询快递单号，请登录快递官方网站查询<br />
+                        3、快递均为到付件<br />
+                        4、收到快递之后：实名认证☞ 充值缴费☞ 正常使用<br />
                     </p>
                 </div>
             </div>
