--- a/HZSoft.Application/HZSoft.Application.Web/Areas/CustomerManage/Views/Orders/OrdersIndex.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/CustomerManage/Views/Orders/OrdersIndex.cshtml
@@ -9,6 +9,14 @@
     });
     //初始化页面
     function InitialPage() {
+        //状态
+        $("#Status").ComboBox({
+            description: "==请选择==",
+        });
+        //支付状态
+        $("#PayStatus").ComboBox({
+            description: "==请选择==",
+        });
         //resize重设布局;
         $(window).resize(function (e) {
             window.setTimeout(function () {
@@ -30,7 +38,7 @@
             colModel: [
                 { label: '主键', name: 'Id', hidden: true },
                 { label: '订单号', name: 'OrderSn', index: 'OrderSn', width: 200, align: 'left',sortable: true  },
-                { label: '手机号码', name: 'Tel', index: 'Tel', width: 100, align: 'left',sortable: true  },
+                { label: '靓号', name: 'Tel', index: 'Tel', width: 100, align: 'left',sortable: true  },
                 { label: '价格', name: 'Price', index: 'Price', width: 80, align: 'center',sortable: true  },
                 { label: '下单时间', name: 'CreateDate', index: 'CreateDate', width: 118, align: 'left',sortable: true  },
                 {
@@ -133,16 +141,126 @@
             dialogMsg('请选择需要删除的订单表！', 0);
         }
     }
+    //发货
+    function btn_send() {
+        var keyValue = $('#gridTable').jqGridRowValue('Id');
+        if (checkedRow(keyValue)) {
+            dialogOpen({
+                id: 'SendForm',
+                title: '发货',
+                url: '../../CustomerManage/Orders/SendForm?keyValue=' + keyValue,
+                width: '250px',
+                height: '200px',
+                callBack: function (iframeId) {
+                    top.frames[iframeId].AcceptClick();
+                }
+            })
+        }
+    }
+
+    //发货
+    function btn_ka() {
+        var keyValue = $("#gridTable").jqGridRowValue('Id');
+        if (checkedRow(keyValue)) {
+            $.ConfirmAjax({
+                msg: "注：您确定【发货】吗？",
+                url: "../../CustomerManage/Orders/UpdateState",
+                param: { keyValue: keyValue },
+                success: function (data) {
+                    $("#gridTable").trigger("reloadGrid");
+                }
+            })
+        }
+    }
 </script>
 <div class="titlePanel">
     <div class="title-search">
         <table>
             <tr>
-                <td>
-                    <input id="txt_Keyword" type="text" class="form-control" placeholder="请输入要查询关键字" style="width: 200px;" />
+                <td>查询条件</td>
+                <td style="padding-left: 10px;">
+                    <div class="ui-filter" style="width: 200px;">
+                        <div class="ui-filter-text">
+                            <strong id="SelectedStartTime">@DateTime.Now.AddDays(-7).ToString("yyyy-MM-dd")</strong> 至 <strong id="SelectedEndTime">@DateTime.Now.ToString("yyyy-MM-dd")</strong>
+                        </div>
+                        <div class="ui-filter-list" style="width: 350px;">
+                            <table class="form" id="filter-form">
+                                <tr>
+                                    <th class="formTitle">单据日期：</th>
+                                    <td class="formValue">
+                                        <input id="Category" type="hidden" value="1" />
+                                        <div style="float: left; width: 45%;">
+                                            <input id="StartTime" readonly type="text" value="@DateTime.Now.AddMonths(-1).ToString("yyyy-MM-dd")" class="form-control input-wdatepicker" onfocus="WdatePicker({maxDate:'%y-%M-%d'})">
+                                        </div>
+                                        <div style="float: left; width: 10%; text-align: center;">至</div>
+                                        <div style="float: left; width: 45%;">
+                                            <input id="EndTime" readonly type="text" value="@HZSoft.Util.Time.GetToday()" class="form-control input-wdatepicker" onfocus="WdatePicker({maxDate:'%y-%M-%d'})">
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="formTitle">单号：</td>
+                                    <td class="formValue">
+                                        <input id="OrderSn" type="text" class="form-control">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="formTitle">靓号：</td>
+                                    <td class="formValue">
+                                        <input id="Tel" type="text" class="form-control">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="formTitle">收件人：</td>
+                                    <td class="formValue">
+                                        <input id="Receiver" type="text" class="form-control">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="formTitle">联系电话：</td>
+                                    <td class="formValue">
+                                        <input id="ContactTel" type="text" class="form-control">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="formTitle">订单状态：</td>
+                                    <td class="formValue">
+                                        <div id="Status" type="select" class="ui-select">
+                                            <ul>
+                                                <li data-value="0">待付款</li>
+                                                <li data-value="1">待审核</li>
+                                                <li data-value="2">待发货</li>
+                                                <li data-value="3">待开卡</li>
+                                                <li data-value="4">已完成</li>
+                                            </ul>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="formTitle">支付状态：</td>
+                                    <td class="formValue">
+                                        <div id="PayStatus" type="select" class="ui-select">
+                                            <ul>
+                                                <li data-value="0">未付款</li>
+                                                <li data-value="1">已付款</li>
+                                            </ul>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </table>
+                            <div class="ui-filter-list-bottom">
+                                <a id="btn_Search" class="btn btn-primary">&nbsp;查&nbsp;&nbsp;询</a>
+                            </div>
+                        </div>
+                    </div>
                 </td>
-                <td style="padding-left: 5px;">
-                    <a id="btn_Search" class="btn btn-primary"><i class="fa fa-search"></i>查询</a>
+                <td style="padding-left: 10px;">
+                    <div id="time_horizon" class="btn-group">
+                        <a class="btn btn-default" data-value="1">今天</a>
+                        <a class="btn btn-default" data-value="2">近7天</a>
+                        <a class="btn btn-default active" data-value="3">近1个月</a>
+                        <a class="btn btn-default" data-value="4">近3个月</a>
+                    </div>
                 </td>
             </tr>
         </table>
@@ -152,6 +270,8 @@
             <a id="lr-replace" class="btn btn-default" onclick="reload()"><i class="fa fa-refresh"></i>&nbsp;刷新</a>
             <a id="lr-add" class="btn btn-default" onclick="btn_add()"><i class="fa fa-plus"></i>&nbsp;新增</a>
             <a id="lr-edit" class="btn btn-default" onclick="btn_edit()"><i class="fa fa-pencil-square-o"></i>&nbsp;编辑</a>
+            <a id="lr-send" class="btn btn-default" onclick="btn_send()"><i class="fa fa-send"></i>发货</a>
+            <a id="lr-ka" class="btn btn-default" onclick="btn_ka()"><i class="fa fa-credit-card-alt"></i>&nbsp;开卡</a>
             <a id="lr-delete" class="btn btn-default" onclick="btn_delete()"><i class="fa fa-trash-o"></i>&nbsp;删除</a>
         </div>
     </div>
