--- a/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/user_order/paymentFinish.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/user_order/paymentFinish.cshtml
@@ -18,20 +18,24 @@
     <link href="/assets/wap/css/weui.min.jquery.css?v=7.4" rel="stylesheet">
     <link href="/assets/wap/css/global.css?v=7.4" rel="stylesheet">
     <link href="/assets/wap/css/user.css?v=7.4" rel="stylesheet">
-    <script src="/assets/wap/js/track_out.js?v=7.4"></script>
-    <script type="text/javascript">
-	var baseUrl = '';
-	//头条
-	var trackToutiaoPara = trackObj.codeToutiao('dLJp5x');
-	if( typeof(trackToutiaoPara.scriptId) != 'undefined' ){
-		(function(r,d,s,l){var meteor=r.meteor=r.meteor||[];meteor.methods=["track","off","on"];meteor.factory=function(method){return function(){
-		var args=Array.prototype.slice.call(arguments);args.unshift(method);meteor.push(args);return meteor}};for(var i=0;i<meteor.methods.length;i++){
-		var key=meteor.methods[i];meteor[key]=meteor.factory(key)}meteor.load=function(){var js,fjs=d.getElementsByTagName(s)[0];js=d.createElement(s);
-		js.src="https://analytics.snssdk.com/meteor.js/v1/"+l+"/sdk";fjs.parentNode.insertBefore(js,fjs)};meteor.load();if(meteor.invoked){return}
-		meteor.invoked=true;meteor.track("pageview")})(window,document,"script",trackToutiaoPara.scriptId);
-	}
-
+    <!-- Bytedance Tracking -->
+    <script>
+        var baseUrl = '';
+        (function (r, d, s, l) {
+            var meteor = r.meteor = r.meteor || []; meteor.methods = ["track", "off", "on"]; meteor.factory = function (method) {
+                return function () {
+                    var args = Array.prototype.slice.call(arguments); args.unshift(method); meteor.push(args); return meteor
+                }
+            }; for (var i = 0; i < meteor.methods.length; i++) {
+                var key = meteor.methods[i]; meteor[key] = meteor.factory(key)
+            } meteor.load = function () {
+                var js, fjs = d.getElementsByTagName(s)[0]; js = d.createElement(s);
+                js.src = "https://analytics.snssdk.com/meteor.js/v1/" + l + "/sdk"; fjs.parentNode.insertBefore(js, fjs)
+            }; meteor.load(); if (meteor.invoked) { return }
+            meteor.invoked = true; meteor.track("pageview")
+        })(window, document, "script", "1664007157743627");
     </script>
+    <!-- End Bytedance Tracking -->
 </head>
 <body>
     <!--主体部分 开始-->
@@ -66,12 +70,7 @@
             <font style="color: #f00;">5、建议支付成功后截屏保存本页面</font><br />
             5、客服电话：<br />
             <p style="padding-left: 20px;">
-                <a href="tel:13953781738">13953781738</a>,
-                <a href="tel:13963792938">13963792938</a>,
-                <a href="tel:13853737238">13853737238</a>,
-                <a href="tel:13853733578">13853733578</a>,
-                <a href="tel:13963722759">13963722759</a>,
-                <a href="tel:13963723379">13963723379</a>
+                <a href="tel:13953781738">15864010086</a>
             </p>
             <p style="padding-left: 20px;">（工作时间：9:00-18:00）。</p>
         </div>
