--- a/HZSoft.Application/HZSoft.Application.Web/Areas/CustomerManage/Views/Orders/SendForm.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/CustomerManage/Views/Orders/SendForm.cshtml
@@ -15,6 +15,9 @@
                 url: "../../CustomerManage/Orders/GetFormJson",
                 param: { keyValue: keyValue},
                 success: function (data) {
+                    if (data.ExpressCompany==null) {
+                        data.ExpressCompany="顺丰"
+                    }
                     $("#form1").SetWebControls(data);
                 }
             })
@@ -43,7 +46,7 @@
         <tr>
             <th class="formTitle" style="width: 60px;">快递公司</th>
             <td class="formValue">
-                <input id="ExpressCompany" type="text" class="form-control"  value="顺丰"  />
+                <input id="ExpressCompany" type="text" class="form-control"/>
             </td>
         </tr>
         <tr>
