--- a/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/mpg/Index.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/mpg/Index.cshtml
@@ -73,18 +73,18 @@
                             号码价格：
                         </span>
                         <a class="curr" href="./?keyword=&features=&city=&orderType=">全部</a>
-                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=" -300">300以下</a>
-                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=" 301-500">301-500</a>
-                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=" 501-1000">501-1000</a>
-                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=" 1001-2000">1001-2000</a>
-                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=" 2001-5000">2001-5000</a>
-                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=" 5001-10000">5001-10000</a>
-                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=" 10001-20000">1-2万</a>
-                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=" 20001-30000">2-3万</a>
-                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=" 30001-50000">3-5万</a>
-                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=" 50001-70000">5-7万</a>
-                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=" 70001-100000">7-10万</a>
-                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=" 100000-">10万以上</a>
+                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=-300">300以下</a>
+                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=301-500">301-500</a>
+                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=501-1000">501-1000</a>
+                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=1001-2000">1001-2000</a>
+                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=2001-5000">2001-5000</a>
+                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=5001-10000">5001-10000</a>
+                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=10001-20000">1-2万</a>
+                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=20001-30000">2-3万</a>
+                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=30001-50000">3-5万</a>
+                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=50001-70000">5-7万</a>
+                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=70001-100000">7-10万</a>
+                        | <a class="" href="./?keyword=&features=&city=&orderType=&price=100000-">10万以上</a>
                     </li>
 
                 </ul>
@@ -266,13 +266,14 @@
                             {
                                 foreach (var bl in list)
                                 {
+                                    decimal? yj = bl.MaxPrice * 2;
                                     <div class="weui-col-50">
                                         <a class="mobile-item" href="/WeChatManage/mpg/detail/@bl.TelphoneID">
                                             <p class="tit">
                                                 <font class="f-orange">@bl.Telphone.Substring(0, 3)</font><font class="f-green">@bl.Telphone.Substring(3, 4)</font><font class="f-red">@bl.Telphone.Substring(7, 4)</font>
-                                                <font class="f-orange pri">¥@bl.Price</font>
-                                                @*<font class="money-market">¥@bl.Price</font>*@
-                                                <font class="money-market" style="text-decoration:none">@bl.Description</font>
+                                                <font class="f-orange pri">¥@bl.MaxPrice</font>
+                                                <font class="money-market">¥@yj</font>
+                                                @*<font class="money-market" style="text-decoration:none">@bl.Description</font>*@
                                             </p>
                                             <p class="txt"><span>@bl.City@bl.Operator </span></p>
                                         </a>
