--- a/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/mpg/detail.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/mpg/detail.cshtml
@@ -54,7 +54,7 @@
                     <div class="cont">
                         <div class="num">@Model.Telphone</div>
                         <div class="price">
-                            <font class="f-orange font16">¥@Model.Price</font>
+                            <font class="f-orange font16">¥@Model.MaxPrice</font>
                             @*<font class="money-market">原价: ¥@Model.Price</font>*@
                         </div>
                         <div class="attr">
@@ -69,7 +69,7 @@
                 <div class="cont">@Model.Package</div>
             </div>
             <div class="weui-btn-area">
-                <a href="/WeChatManage/mpg/flow/@Model.TelphoneID?Tel=@Model.Telphone&Price=@Model.Price" class="weui-btn weui-btn_warn btn">立即订购</a>
+                <a href="/WeChatManage/mpg/flow/@Model.TelphoneID?Tel=@Model.Telphone&Price=@Model.MaxPrice" class="weui-btn weui-btn_warn btn">立即订购</a>
             </div>
             <div class="mobile-detail-memo" style="margin:2rem 0 0;">
                 <div class='adbanner'>	<a href='javascript:void(0);' class='kefuqq'><img src='~/assets/image/1579161570_UEvXZK.jpg' style='max-width:100%;max-height:100%;padding:0px 0px 0px 0px;' /></a></div>
