--- a/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/mpg/Index.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/mpg/Index.cshtml
@@ -41,7 +41,8 @@
 <body class="mpd">
     <div class="wrapper">
         <div class="wrapper-flash">
-            <img src="~/assets/image/1585294223_SxcUpg.png" />
+            @*<img src="~/assets/image/1585294223_SxcUpg.png" />*@
+            <img src="~/assets/wap/images/banner1.png" />
             <div class="quick-tool">
                 <a href="javascript:;" class="huodong open-popup" data-target="#cardGonglue">活动攻略</a>
                 <a href="/WeChatManage/user_index/login2/" class="user">订单查询</a>
@@ -91,7 +92,8 @@
             </div>
             <div class="search-section">
                 <form action="./" method="GET">
-                    <div class="input-mod"><i class="iconfont">&#xe611;</i><input type="text" name="keyword" class="keyword" value="" placeholder="请输入您喜欢的号码" autocomplete="off"></div>
+                    <div class="input-mod"><i class="iconfont">&#xe611;</i>
+                    <input type="text" name="keyword" class="keyword" value="" placeholder="请输入您喜欢的号码" autocomplete="off"></div>
                     <input type="hidden" name="city" value="" />
                     <input type="hidden" name="type" value="" />
                     <input type="hidden" name="sort" value="" />
@@ -100,39 +102,39 @@
                 </form>
             </div>
             <div class="index-scroll">
-                <div class="index-note">已有 6492 人申请</div>
+                <div class="index-note">已有 682 人申请</div>
                 <div class="scroll-div" id="scrollDiv">
                     <ul>
-                        <li class="text-over">袁**&nbsp;获得 171****8666</li>
-                        <li class="text-over">杨**&nbsp;获得 162****1964</li>
-                        <li class="text-over">霍**&nbsp;获得 170****3437</li>
-                        <li class="text-over">温**&nbsp;获得 170****4999</li>
+                        <li class="text-over">翟**&nbsp;获得 170****7123</li>
+                        <li class="text-over">邵**&nbsp;获得 165****3555</li>
+                        <li class="text-over">杜**&nbsp;获得 170****1314</li>
+                        <li class="text-over">赵**&nbsp;获得 162****1373</li>
+                        <li class="text-over">代**&nbsp;获得 162****8882</li>
+                        <li class="text-over">张**&nbsp;获得 170****1234</li>
+                        <li class="text-over">王**&nbsp;获得 162****9999</li>
+                        <li class="text-over">郑**&nbsp;获得 162****1111</li>
+                        <li class="text-over">韩**&nbsp;获得 162****5558</li>
+                        <li class="text-over">范**&nbsp;获得 162****5777</li>
+                        <li class="text-over">陈**&nbsp;获得 165****8889</li>
+                        <li class="text-over">宋**&nbsp;获得 186****8333</li>
+                        <li class="text-over">李**&nbsp;获得 132****5555</li>
+                        <li class="text-over">刘**&nbsp;获得 171****7789</li>
+                        <li class="text-over">管**&nbsp;获得 171****9933</li>
+                        <li class="text-over">王**&nbsp;获得 170****8888</li>
+                        <li class="text-over">李**&nbsp;获得 170****6667</li>
+                        <li class="text-over">徐**&nbsp;获得 162****4555</li>
+                        <li class="text-over">张**&nbsp;获得 171****6789</li>
+                        <li class="text-over">李**&nbsp;获得 162****9995</li>
+                        <li class="text-over">赵**&nbsp;获得 171****4444</li>
+                        <li class="text-over">麻**&nbsp;获得 171****8666</li>
+                        <li class="text-over">杨**&nbsp;获得 162****1314</li>
+                        <li class="text-over">初**&nbsp;获得 170****5999</li>
+                        <li class="text-over">李**&nbsp;获得 170****7777</li>
                         <li class="text-over">付**&nbsp;获得 170****2666</li>
                         <li class="text-over">陈**&nbsp;获得 170****4333</li>
-                        <li class="text-over">史**&nbsp;获得 171****9222</li>
-                        <li class="text-over">滕**&nbsp;获得 162****6777</li>
-                        <li class="text-over">罗**&nbsp;获得 170****7555</li>
-                        <li class="text-over">王**&nbsp;获得 165****3555</li>
-                        <li class="text-over">张**&nbsp;获得 170****5338</li>
-                        <li class="text-over">赵**&nbsp;获得 162****1373</li>
-                        <li class="text-over">朱**&nbsp;获得 162****8882</li>
-                        <li class="text-over">张**&nbsp;获得 170****1555</li>
-                        <li class="text-over">苏**&nbsp;获得 162****1997</li>
-                        <li class="text-over">郑**&nbsp;获得 162****8185</li>
-                        <li class="text-over">高**&nbsp;获得 162****5558</li>
-                        <li class="text-over">周**&nbsp;获得 162****5111</li>
-                        <li class="text-over">陈**&nbsp;获得 165****8876</li>
-                        <li class="text-over">陈**&nbsp;获得 186****8333</li>
-                        <li class="text-over">李**&nbsp;获得 132****7899</li>
-                        <li class="text-over">彭**&nbsp;获得 171****7706</li>
-                        <li class="text-over">梅**&nbsp;获得 171****9933</li>
-                        <li class="text-over">曹**&nbsp;获得 170****6555</li>
-                        <li class="text-over">李**&nbsp;获得 170****5557</li>
-                        <li class="text-over">柴**&nbsp;获得 162****4555</li>
-                        <li class="text-over">张**&nbsp;获得 171****6786</li>
-                        <li class="text-over">李**&nbsp;获得 162****9995</li>
-                        <li class="text-over">赵**&nbsp;获得 171****8868</li>
-                        <li class="text-over">周**&nbsp;获得 171****8111</li>
+                        <li class="text-over">史**&nbsp;获得 171****9789</li>
+                        <li class="text-over">刘**&nbsp;获得 162****6777</li>
+                        <li class="text-over">潘**&nbsp;获得 171****8111</li>
                     </ul>
                 </div>
             </div>
