新的版式，小左红色主体

--- a/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/mpg/detail.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/mpg/detail.cshtml
@@ -40,7 +40,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <header><a href="/WeChatManage/mpg/index" class="t_icon"></a>号码详情<font class="d-n">(GDTA4)</font></header>
+        <header><a href="/WeChatManage/mpg/index" class="t_icon"></a>号码详情<font class="d-n"></font></header>
         <div class="mpart">
             <div class="vision">
                 <div class="s_mide layer" data-depth=".35"></div>
