--- a/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/user_basic/Index.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/WeChatManage/Views/user_basic/Index.cshtml
@@ -9,8 +9,8 @@
     <meta http-equiv="Cache-Control" content="no-siteapp" />
     <meta http-equiv="Cache-Control" content="no-transform" />
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="会员资料 - 济南利新商贸有限公司">
-    <title>会员资料 - 济南利新商贸有限公司</title>
+    <meta name="apple-mobile-web-app-title" content="会员资料 - 号运来靓号网">
+    <title>会员资料 - 号运来靓号网</title>
     <meta content="" name="keywords">
     <meta content="" name="description">
     <link rel="shortcut icon" href="/favicon.ico">
