--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop/express.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop/express.cshtml
@@ -9,17 +9,35 @@
     <link rel="stylesheet" href="/themes/simplebootx_mobile/Public/css/jquery-weui.min.css">
     <link rel="stylesheet" href="/themes/simplebootx_mobile/Public/css/css.css">
     <meta name="__hash__" content="7b0f3a2a9f377f891467cd68e53fed46_24979016d770f6070b4ecf6b2782af30" />
+    <!-- Bytedance Tracking -->
+    <script>
+        var baseUrl = '';
+        (function (r, d, s, l) {
+            var meteor = r.meteor = r.meteor || []; meteor.methods = ["track", "off", "on"]; meteor.factory = function (method) {
+                return function () {
+                    var args = Array.prototype.slice.call(arguments); args.unshift(method); meteor.push(args); return meteor
+                }
+            }; for (var i = 0; i < meteor.methods.length; i++) {
+                var key = meteor.methods[i]; meteor[key] = meteor.factory(key)
+            } meteor.load = function () {
+                var js, fjs = d.getElementsByTagName(s)[0]; js = d.createElement(s);
+                js.src = "https://analytics.snssdk.com/meteor.js/v1/" + l + "/sdk"; fjs.parentNode.insertBefore(js, fjs)
+            }; meteor.load(); if (meteor.invoked) { return }
+            meteor.invoked = true; meteor.track("pageview")
+        })(window, document, "script", "1664007157743627");
+    </script>
+    <!-- End Bytedance Tracking -->
 </head>
 <body>
     <div class="express">
         <div class="express-back">
-            <a href="/H5/home/index"></a>
+            <a href="/webapp/shop/index"></a>
         </div>
         <h1 class="express-h1">快递查询</h1>
         <div class="express-box">
             <input placeholder="请输入手机号" id="mobile" type="number" value="" class="land-input phone">
             <div class="page-btn" style="padding: 0; margin-top: 10px;">
-                <a href="#" data-url="/home/express?mobile=mobileval" id="search-submit" class="weui-btn">立即查询</a>
+                <a href="#" data-url="/webapp/shop/express?mobile=mobileval" id="search-submit" class="weui-btn"  style="background: #ee5246;">立即查询</a>
             </div>
             <div class="tip">
                 <p>
