--- a/HZSoft.Application/HZSoft.Application.Web/webapp/css/m.css
+++ b/HZSoft.Application/HZSoft.Application.Web/webapp/css/m.css
@@ -102,12 +102,12 @@ input[type=text],input[type=number],input[type=tel],textarea,input[type=button],
   
   .hasresult{ padding-bottom:1px; min-height:350px;}
   .mb-list{ }
-  .mb-list li{ float:left; width:50%; padding:10px 0; border-bottom:1px solid #ececec; position:relative; text-align:center; }
+  .mb-list li{ float:left; width:50%; padding:5px 0; border-bottom:1px solid #ececec; position:relative; text-align:center; }
   .mb-list li:nth-child(odd)::after { content:""; display:inline-block; width:0; height:100%; border-right:1px solid #ececec; position:absolute; right:0; top:0; bottom:0; }
   .mb-list li:nth-child(even) {}
   .mb-list li a{ display:block; width:100%; height:100%; }
   .mb-list .mobile{ font-size: 22px; color:#333; }
-  .mb-list .city{ font-size: 10px; color:#999; margin:5px 0; }
+  .mb-list .city{ font-size: 10px; color:#999; /*margin:5px 0;*/ }
   .mb-list .price{ font-size: 18px; color:#f60; }
   .mb-list .price i{ font-size: 10px; color:#999; font-style:normal; }
   .mb-list .price span{ font-size: 10px; color:#999; margin-left:10px; }
@@ -534,7 +534,7 @@ input[type=text],input[type=number],input[type=tel],textarea,input[type=button],
 
 /*so-kw*/
 .searchNum-s{ display:flex; flex-direction:row; justify-content:center; align-items:center; flex-wrap: wrap; }
-.searchNum-s input{ -webkit-appearance: none; outline:none; width:18px; height:28px; line-height:28px; text-align:center; padding:2px; margin:0; font-size:16px; font-weight:900; 
+.searchNum-s input{ -webkit-appearance: none; outline:none; width:16px; height:28px; line-height:28px; text-align:center; padding:2px; margin:0; font-size:16px; font-weight:900; 
                                border-left: 1px solid #d3d3d3;border-top: 1px solid #d3d3d3;border-bottom: 1px solid #d3d3d3; border-right: 0; }
 .searchNum-s input:last-child{ border-right: 1px solid #d3d3d3;}
 .searchNum-s input:nth-child(4),.searchNum-s input:nth-child(5),.searchNum-s input:nth-child(6),.searchNum-s input:nth-child(7){ background-color:#ffffcc; }
