--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop2/express.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop2/express.cshtml
@@ -11,7 +11,6 @@
     <meta name="__hash__" content="7b0f3a2a9f377f891467cd68e53fed46_24979016d770f6070b4ecf6b2782af30" />
     <!-- Bytedance Tracking -->
     <script>
-        var baseUrl = '';
         (function (r, d, s, l) {
             var meteor = r.meteor = r.meteor || []; meteor.methods = ["track", "off", "on"]; meteor.factory = function (method) {
                 return function () {
@@ -24,22 +23,23 @@
                 js.src = "https://analytics.snssdk.com/meteor.js/v1/" + l + "/sdk"; fjs.parentNode.insertBefore(js, fjs)
             }; meteor.load(); if (meteor.invoked) { return }
             meteor.invoked = true; meteor.track("pageview")
-        })(window, document, "script", "1664007157743627");
+        })(window, document, "script", "1663392064049159");
     </script>
     <!-- End Bytedance Tracking -->
 </head>
 <body>
     <div class="express">
         <div class="express-back">
-            <a href="/webapp/shop/index"></a>
+            <a href="/webapp/shop2/index"></a>
         </div>
         <h1 class="express-h1">快递查询</h1>
         <div class="express-box">
             <input placeholder="请输入购买的手机号" id="mobile" type="number" value="" class="land-input phone">
             <div class="page-btn" style="padding: 0; margin-top: 10px;">
-                <a href="#" data-url="/webapp/shop/express?mobile=mobileval" id="search-submit" class="weui-btn" style="background: #ee5246;">立即查询</a>
+                <a href="#" data-url="/webapp/shop2/express?mobile=mobileval" id="search-submit" class="weui-btn" style="background: #ee5246;">立即查询</a>
             </div>
             <div class='jieguo' style="display:@ViewBag.display"><p><strong>查询结果</strong></p><p>@ViewBag.msg</p></div>
+
             <div class="tip">
                 <p>
                     <strong>温馨提示</strong>
